// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <StatusView
    buttonAttrs={Array []}
    isAlignedTop={false}
    isGlyphHidden={false}
  >
    <div
      className="outer-view orion-fusion-theme"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      />
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</ThemeContextProvider>
`;

exports[`should render a no-data status view with a hidden glyph 1`] = `
<StatusView
  buttonAttrs={Array []}
  isAlignedTop={false}
  isGlyphHidden={true}
  variant="no-data"
>
  <div
    className="outer-view"
  >
    <div
      className="top-space"
    />
    <div
      className="inner-view"
    >
      <p
        className="title"
      >
        <FormattedMessage
          id="Terra.status-view.no-data"
        >
          Terra.status-view.no-data
        </FormattedMessage>
      </p>
    </div>
    <div
      className="bottom-space"
    />
  </div>
</StatusView>
`;

exports[`should render a no-matching-results status-view with top alignment 1`] = `
<StatusView
  buttonAttrs={Array []}
  isAlignedTop={true}
  isGlyphHidden={false}
  variant="no-matching-results"
>
  <div
    className="outer-view is-aligned-top"
  >
    <div
      className="top-space"
    />
    <div
      className="inner-view"
    >
      <div
        className="glyph"
      >
        <div
          className="no-matching-results glyph-icon"
        />
      </div>
      <p
        className="title"
      >
        <FormattedMessage
          id="Terra.status-view.no-matching-results"
        >
          Terra.status-view.no-matching-results
        </FormattedMessage>
      </p>
    </div>
    <div
      className="bottom-space"
    />
  </div>
</StatusView>
`;

exports[`should render a not-authorized status-view 1`] = `
<StatusView
  buttonAttrs={Array []}
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="not-authorized"
>
  <div
    className="outer-view"
  >
    <div
      className="top-space"
    />
    <div
      className="inner-view"
    >
      <div
        className="glyph"
      >
        <div
          className="not-authorized glyph-icon"
        />
      </div>
      <p
        className="title"
      >
        <FormattedMessage
          id="Terra.status-view.not-authorized"
        >
          Terra.status-view.not-authorized
        </FormattedMessage>
      </p>
    </div>
    <div
      className="bottom-space"
    />
  </div>
</StatusView>
`;

exports[`should render a status view with custom glyph, title, message, and two buttons 1`] = `
<div
  className="outer-view"
>
  <div
    className="top-space"
  />
  <div
    className="inner-view"
  >
    <div
      className="glyph"
    >
      <IconDiamond
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <p
      className="title"
    >
      Test Title
    </p>
    <div
      className="divider"
    >
      <Divider />
    </div>
    <p
      className="message"
    >
      Test Message
    </p>
    <div
      className="actions"
    >
      <Button
        className="button"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={false}
        isReversed={false}
        key="1"
        text="Action1"
        type="button"
        variant="neutral"
      />
      <Button
        className="button"
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={false}
        isReversed={false}
        key="2"
        text="Action2"
        type="button"
        variant="neutral"
      />
    </div>
  </div>
  <div
    className="bottom-space"
  />
</div>
`;

exports[`should render an error status-view 1`] = `
<StatusView
  buttonAttrs={Array []}
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="error"
>
  <div
    className="outer-view"
  >
    <div
      className="top-space"
    />
    <div
      className="inner-view"
    >
      <div
        className="glyph"
      >
        <div
          className="error glyph-icon"
        />
      </div>
      <p
        className="title"
      >
        <FormattedMessage
          id="Terra.status-view.error"
        >
          Terra.status-view.error
        </FormattedMessage>
      </p>
    </div>
    <div
      className="bottom-space"
    />
  </div>
</StatusView>
`;
